@@ -31,15 +31,15 @@ QUICKSTART_CONF = '''\
 # The contents of this file are pickled, so don't put values in the namespace
 # that aren't pickleable (module imports are okay, they're removed automatically).
 #
-# All configuration values have a default value; values that are commented out
-# serve to show the default value.
+# All configuration values have a default; values that are commented out
+# serve to show the default.
 
 import sys, os
 
 # If your extensions are in another directory, add it here. If the directory
 # is relative to the documentation root, use os.path.abspath to make it
 # absolute, like shown here.
-#sys.path.append(os.path.abspath('some/directory'))
+#sys.path.append(os.path.abspath('.'))
 
 # General configuration
 # ---------------------
@@ -57,19 +57,21 @@ source_suffix = '%(suffix)s'
 # The master toctree document.
 master_doc = '%(master)s'
 
-# General substitutions.
+# General information about the project.
 project = u'%(project)s'
 copyright = u'%(copyright)s'
 
-# The default replacements for |version| and |release|, also used in various
-# other places throughout the built documents.
+# The version info for the project you're documenting, acts as replacement for
+# |version| and |release|, also used in various other places throughout the
+# built documents.
 #
 # The short X.Y version.
 version = '%(version)s'
 # The full version, including alpha/beta/rc tags.
 release = '%(release)s'
 
-# The language for content autogenerated by Sphinx
+# The language for content autogenerated by Sphinx. Refer to documentation
+# for a list of supported languages.
 #language = None
 
 # There are two options for replacing |today|: either, you set today to some
@@ -81,7 +83,7 @@ release = '%(release)s'
 # List of documents that shouldn't be included in the build.
 #unused_docs = []
 
-# List of directories, relative to source directories, that shouldn't be searched
+# List of directories, relative to source directory, that shouldn't be searched
 # for source files.
 exclude_trees = [%(exclude_trees)s]
 
